--- a/src/scss/components/_pagination.scss
+++ b/src/scss/components/_pagination.scss
@@ -35,6 +35,7 @@
       display: inline-block;
       vertical-align: top;
       width: 17px;
+      border: 1px solid transparent;
       color: $link-paginashoin;
       &:hover {
         border-radius: 3px;
